Fixed the floating action buttons for the feeds in the tree to be displayed fully visible.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/watch/trunk@23831 f329d543-caf0-0310-9063-dda96c69346f

--- a/gwt-client/src/main/resources/com/xpn/xwiki/watch/public/minimal.css
+++ b/gwt-client/src/main/resources/com/xpn/xwiki/watch/public/minimal.css
@@ -152,3 +152,9 @@ div.minwidth {
 	padding-left:30px;
 	width:auto;
 }
+
+.clearfloats {
+	clear: both;
+	width: 1px;
+	height: 1px;
+}
